sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: illegal start of simple expression
	          while ((j > 0) && (plusPetit(j,j-1)));
                                                       ^